--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,11 @@
             <version>1.5.5.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.jfoenix</groupId>
+            <artifactId>jfoenix</artifactId>
+            <version>9.0.10</version>
+        </dependency>
 
     </dependencies>
 
